[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://2d-movesim.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 18.0278

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.639098, 0.736842 )
colors = PoolColorArray( 1, 0.015625, 0.015625, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture2D" id=3]
gradient = SubResource( 2 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 11, 10 )

[sub_resource type="CircleShape2D" id=8]
radius = 15.6205

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 15.75 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 544, 10 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.03125, 1, 0, 1 )

[sub_resource type="GradientTexture2D" id=6]
gradient = SubResource( 5 )
fill_from = Vector2( 1, 0 )
fill_to = Vector2( 0, 0 )

[node name="2d-movesim" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" type="KinematicBody2D" parent="."]
collision_mask = 0
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="Body" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 0.53125, 0.53125 )
texture = SubResource( 3 )

[node name="FeetArea" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 2

[node name="FeetCollider" type="CollisionShape2D" parent="Player/FeetArea"]
position = Vector2( 0, 9 )
shape = SubResource( 7 )

[node name="LeftLegArea" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 2

[node name="LeftLegCollider" type="CollisionShape2D" parent="Player/LeftLegArea"]
position = Vector2( -10, 4 )
rotation = 1.5708
scale = Vector2( 1, 1 )
shape = SubResource( 8 )

[node name="RightLegArea" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 2

[node name="RightLegCollider" type="CollisionShape2D" parent="Player/RightLegArea"]
position = Vector2( 10, 4 )
rotation = 0.785398
scale = Vector2( 1, 1 )
shape = SubResource( 8 )

[node name="LeftArmArea" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 2

[node name="LeftArmCollider" type="CollisionShape2D" parent="Player/LeftArmArea"]
position = Vector2( -17, -2.84217e-13 )
rotation = -3.14159
scale = Vector2( 1, 1 )
shape = SubResource( 9 )

[node name="RightArmArea" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 2

[node name="RightArmCollider" type="CollisionShape2D" parent="Player/RightArmArea"]
position = Vector2( 17, -9.09495e-13 )
scale = Vector2( 1, 1 )
shape = SubResource( 9 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 0, 78 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Floor"]
scale = Vector2( 16.9375, 0.34375 )
texture = SubResource( 6 )
